# AgentCanvas

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  VERSIONING.md  pyproject.toml  ruff.toml
agentcanvas/backend/: .env.example  README.md  profiles.json  pyproject.toml  requirements.txt
agentcanvas/backend/agentcanvas/: __init__.py
agentcanvas/backend/app/: __main__.py  code_first.py  code_first_demo.py  config.py  errors.py  eval_subprocess_main.py  graph_def.py  graph_sdk.py  graph_sdk_codegen.py  graph_sdk_demo.py  graph_sdk_replay.py  layout.py  main.py  mapgpt_mp3d_codefirst.py  mapgpt_mp3d_sdk.py  models.py  state.py  test_canvas_guard_reaper.py  test_dependency_boundary.py  test_event_push.py  test_graph_sdk.py  test_import_boundary.py  test_iterout_contract.py  test_layout.py  test_nodeset_watcher.py  test_state_normalization.py  test_strict_errors.py
agentcanvas/backend/app/agent_loop/: __init__.py  builtin_nodes.py  env_worker_pool.py  eval_batch.py  flatten.py  graph_executor.py  hooks.py  loop_runner.py  scope_analysis.py  state_containers.py  test_boundary_settle.py  test_builtin_nodes.py  test_dynamic_firelist.py  test_eval_batch.py  test_executor_scopes.py  test_flatten_pairedwith.py  test_iterin_port_configs.py  test_node_error_routing.py  test_post_loop.py  test_scope_analysis.py  test_state_containers.py
agentcanvas/backend/app/api/canvas/: __init__.py  env_panel.py  (+1 more)
agentcanvas/backend/app/components/: __init__.py  bases.py  content_hash.py  env_panel.py  nodeset_source.py  registry.py  test_content_hash.py  test_nodeset_source.py  test_registry_ensure_shared.py  test_registry_ephemeral.py  test_registry_reload_eviction.py
agentcanvas/backend/app/llm/: __init__.py  call.py  cli.py  key_validator.py  keystore.py  profiles.py  providers.py  rulebook.py  test_keystore.py  test_rulebook.py
agentcanvas/backend/app/logging/: __init__.py  logger.py  models.py
agentcanvas/backend/app/replay/: __init__.py  interface.py  renderer_client.py  renderer_host.py
agentcanvas/backend/app/server/: __init__.py  _loopback_proxy.py  auto_host.py  auto_server_app.py  base_server.py  batched_inference.py  event_push.py  manifest.py  nodeset.py  proxy.py  remote_container.py  serialization.py  server_app.py  test_serialization.py
agentcanvas/backend/app/services/: coding_agent_runner.py  graph_watcher.py  human_runner.py  job_scheduler.py  nodeset_watcher.py  resource_sampler.py  resource_stats.py  run_state_io.py  system_runs.py  test_job_scheduler.py  test_resource_sampler.py  test_resource_stats.py  test_run_state_io.py
agentcanvas/backend/app/standard/: __init__.py  actions.py  node_io.py  telemetry.py  wire_types.py
agentcanvas/backend/app/tools/: __init__.py  validate_graph.py
agentcanvas/backend/examples/: 01_pure_python.py  02_authoring_sugar.py  03_mapgpt_from_code.py  04_run_one_episode.py  05_batch_eval.py  06_reverse_codegen.py  07_habitat_sam.py  README.md
agentcanvas/backend/tests/cassettes/: habitat_sam_first_frame.mpk
(+1781 files in other folders)
