[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcanvas"
version = "0.1.0"
description = "Graph SDK for AgentCanvas — build & run VLN agent graphs in Python, like LangGraph."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentCanvas" }]
keywords = ["vln", "embodied-ai", "agent", "graph", "dataflow"]

# The Graph SDK surface (agentcanvas / app.graph_sdk / app.graph_def) is
# stdlib-only and always importable. Running a graph needs Settings
# (workspace discovery), hence pydantic-settings; everything heavier is an
# extra so `pip install agentcanvas` stays light:
#
#   agentcanvas[server]  — server-node proxy + cassette record/replay
#   agentcanvas[llm]     — the llmCall builtin node
#   agentcanvas[backend] — the full FastAPI canvas backend (superset of
#                          agentcanvas/backend/requirements.txt; keep in sync)
#
# This file lives at the repo root so a fresh clone installs with a plain
# `pip install -e .`; the packages themselves live under agentcanvas/backend/.
dependencies = ["pydantic-settings>=2.6.0"]

[project.optional-dependencies]
server = ["httpx>=0.28.0", "msgpack>=1.0.0", "numpy>=1.24,<2.0"]
llm = ["litellm>=1.40,<2.0", "pyyaml>=6.0"]
backend = [
    "agentcanvas[server,llm]",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "websockets>=13.0",
    "psutil>=5.9",
    "mcp>=1.0.0",
]
all = ["agentcanvas[backend]"]

[project.urls]
Homepage = "https://github.com/jianzhou0420/AgentCanvas"

[tool.setuptools.packages.find]
where = ["agentcanvas/backend"]
include = ["app*", "agentcanvas*"]

[tool.setuptools.package-dir]
"" = "agentcanvas/backend"

[tool.setuptools.package-data]
"*" = ["py.typed"]
