[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcanvas"
version = "0.1.0"
description = "Graph SDK for AgentCanvas — build & run VLN agent graphs in Python, like LangGraph."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentCanvas" }]
keywords = ["vln", "embodied-ai", "agent", "graph", "dataflow"]

# The Graph SDK surface (agentcanvas / app.graph_sdk / app.graph_def) is
# stdlib-only and always importable. The heavy backend/runtime dependencies
# (FastAPI, torch, litellm, …) that a *nodeset* run needs live in
# requirements.txt and are provisioned by the `agentcanvas` conda env — kept
# out of here so `pip install agentcanvas` stays light and the SDK imports
# without dragging the whole platform in.
dependencies = []

[project.urls]
Homepage = "https://github.com/jianzhou0420/AgentCanvas"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agentcanvas*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
